# cav

./: CMakeLists.txt  README.md  a.out  ex1.cpp  main.cpp
assignment1/: CMakeLists.txt  in  main.cpp
assignment2/: AudioEntropy.cpp  AudioEntropy.h  CMakeLists.txt  Codec.cpp  Common.cpp  Common.h  FakeAudioCodec.cpp  FakeAudioCodec.h  RealAudioCodec.cpp  RealAudioCodec.h  wavCopy.cpp
assignment3/: CMakeLists.txt  PlayerYUV444.cpp
lab0/: a.out  exAC.cpp  exB.cpp  exD.cpp
lab1/: a.out  ex1.cpp  ex2.cpp
